# boatse-extractor

./: README.md  pyproject.toml  requirements.txt
boatse_agent/: __init__.py  agent.py  agent_loop.py
boatse_agent/agent/: run_context.py
boatse_agent/logging/: logger.py
boatse_agent/prompts/: agent_base_prompt.py  agent_context_prompt.py  agent_simple_prompt.py
boatse_agent/tools/: tools.py
boatse_agent/workers/: inference_worker.py
boatse_extractor/: __init__.py  extractor.py
boatse_extractor/prompts/: agent_context_prompt.py
extractor/: __init__.py  extractor.py
extractor/prompts/: agent_context_prompt.py
trajectory_viewer/: __init__.py  trajectory_viewer.py
utils/: git_utils.py  json_utils.py  tokenization_utils.py  validate_output.py
